force-app/main/default/objects/Invoice_Response__e/Invoice_Response__e.object-meta.xml
<CustomObject>
    <label>Invoice Response</label>
    <pluralLabel>Invoice Responses</pluralLabel>
</CustomObject>