force-app/main/default/objects/Invoice_Response__e/fields/Invoice_PDF_Base64__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF_Base64__c</fullName>
    <label>Invoice PDF Base64</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>