force-app/main/default/objects/Invoice_Response__e/fields/Related_OppId__c.field-meta.xml
<CustomField>
    <fullName>Related_OppId__c</fullName>
    <label>Related OppId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>